# PSP-6DOF

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
benchmarks/: bench_integrators.py
dynamics/: forces.py
integrator/: mk_rk4.py  rk4.py
lie/: se23.py  sek3.py  so3.py
psp6dof.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_forces.py  test_integrator.py  test_se23.py  test_so3.py  test_vehicle.py
vehicle/base/: component.py  sensors.py
vehicle/rocket/: avionics.py  inertia.py  propulsion.py  rocket.py  structural.py
