[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psp6dof"
version = "0.1.0"
description = "PSP Liquids 6DoF Rocket Simulator using Lie Group Mathematics"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
  {name = "Pradyunn Kale"},
  {name = "Hudson Reynolds"},
]

dependencies = [
  "jax>=0.4.0",
  "jaxlib>=0.4.0",
  "scipy>=1.10.0",
  "matplotlib>=3.7.0",
  "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"